force-app/main/default/objects/District_360_FSA__mdt/District_360_FSA__mdt.object-meta.xml
<CustomObject>
    <description>D360 FSA type,subtype and subsubtypes icon url, name and dependencies</description>
    <label>District 360 FSA</label>
    <pluralLabel>District 360 FSA</pluralLabel>
</CustomObject>