force-app/main/default/objects/District_360_FSA__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To make sure this type/subtype to be used in App</description>
    <inlineHelpText>To make sure this type/subtype to be used in App</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>