force-app/main/default/objects/District_360_FSA__mdt/fields/BG_color_code__c.field-meta.xml
<CustomField>
    <fullName>BG_color_code__c</fullName>
    <description>Background Color code for respective</description>
    <label>BG color code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>