force-app/main/default/objects/District_360_FSA__mdt/fields/Checkbox_fields_in_UI__c.field-meta.xml
<CustomField>
    <fullName>Checkbox_fields_in_UI__c</fullName>
    <description>fields to be displayed as checkboxes in ui</description>
    <label>Checkbox fields in UI</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>