force-app/main/default/objects/District_360_FSA__mdt/fields/Formula_Fields__c.field-meta.xml
<CustomField>
    <fullName>Formula_Fields__c</fullName>
    <label>Formula Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>