force-app/main/default/objects/District_360_FSA__mdt/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <description>label full name which is used for displaying in app</description>
    <label>Full Name</label>
    <type>TextArea</type>
</CustomField>