force-app/main/default/objects/District_360_FSA__mdt/fields/Icon_url__c.field-meta.xml
<CustomField>
    <fullName>Icon_url__c</fullName>
    <label>Icon url</label>
    <length>111000</length>
    <type>LongTextArea</type>
</CustomField>