force-app/main/default/objects/District_360_FSA__mdt/fields/Org_Base_Url__c.field-meta.xml
<CustomField>
    <fullName>Org_Base_Url__c</fullName>
    <label>Org Base Url</label>
    <type>TextArea</type>
</CustomField>