force-app/main/default/objects/District_360_FSA__mdt/fields/Subtype_dependency__c.field-meta.xml
<CustomField>
    <fullName>Subtype_dependency__c</fullName>
    <description>The mentioned subtypes are having no sub-subtypes</description>
    <label>Subtype dependency</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>