force-app/main/default/objects/District_360_FSA__mdt/fields/Type_dependency__c.field-meta.xml
<CustomField>
    <fullName>Type_dependency__c</fullName>
    <description>The mentioned Types are having no subtypes</description>
    <label>Type dependency</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>